src/test/ui/feature-gates/feature-gate-cfg_accessible.rs
#[cfg(accessible(::std::mem::ManuallyDrop))] //~^ ERROR: currently unstable
fn main() {}
